[gd_scene load_steps=15 format=3 uid="uid://jyq4wji2feey"]

[ext_resource type="Script" path="res://TurnBased/enemy_battler.gd" id="1_7awni"]
[ext_resource type="Shader" path="res://Assets/hit_and_damage.gdshader" id="2_akarr"]
[ext_resource type="Texture2D" uid="uid://i45dv1ivan0c" path="res://Assets/Sprites/Enemies/dogfight.png" id="3_gihgm"]
[ext_resource type="Theme" uid="uid://d4bp6srhi37i8" path="res://Assets/text_theme.tres" id="4_8lna1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p6m4b"]
resource_local_to_scene = true
shader = ExtResource("2_akarr")
shader_parameter/get_attacked = null
shader_parameter/hit_enemy = null
shader_parameter/DamageColor = Color(0.45098, 0, 0, 1)
shader_parameter/AttackColor = Color(0.929412, 0.929412, 0.929412, 1)

[sub_resource type="Animation" id="Animation_xcx80"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/hit_enemy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_k7g88"]
resource_name = "attack"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/hit_enemy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1egu3"]
_data = {
"RESET": SubResource("Animation_xcx80"),
"attack": SubResource("Animation_k7g88")
}

[sub_resource type="Animation" id="Animation_24nlj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/get_attacked")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_gkq2n"]
resource_name = "hit"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/get_attacked")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n0vfa"]
_data = {
"RESET": SubResource("Animation_24nlj"),
"hit": SubResource("Animation_gkq2n")
}

[sub_resource type="Animation" id="Animation_fe3fy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_o716g"]
resource_name = "idle"
length = 2.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1e-05, 1e-05, 1e-05, 1e-05, 1e-05),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(1, 1), Vector2(0, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gyi43"]
_data = {
"RESET": SubResource("Animation_fe3fy"),
"idle": SubResource("Animation_o716g")
}

[node name="EnemyBattler" type="Node2D" groups=["EnemyBattler"]]
script = ExtResource("1_7awni")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_p6m4b")
texture = ExtResource("3_gihgm")

[node name="AttackAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1egu3")
}

[node name="HitAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n0vfa")
}

[node name="IdlePlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gyi43")
}
autoplay = "idle"

[node name="RectW" type="ColorRect" parent="."]
offset_left = -17.0
offset_top = -26.0
offset_right = 17.0
offset_bottom = -17.0
color = Color(0.929412, 0.929412, 0.929412, 1)

[node name="RectB" type="ColorRect" parent="RectW"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 33.0
offset_bottom = 8.0
color = Color(0.45098, 0, 0, 1)

[node name="HPLabel" type="Label" parent="RectW/RectB"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("4_8lna1")
theme_override_font_sizes/font_size = 8
text = "0 / 0"
horizontal_alignment = 1
vertical_alignment = 1
